HTML e CSS do header e main prontos. RESPONSIVIDADE 80% pronto

--- a/utilitario.css
+++ b/utilitario.css
@@ -12,4 +12,10 @@
     --c2:  #EDEDED;
     --c1:  #F7F7F7;
     --w:   #FFFFFF;
+
+    --p5: #332200;
+    --p4: #664400;
+    --p3: #A66F00;
+    --p2: #E4A30B;
+    --p1: #FFBB00;
 }
