--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    /* border: 2px solid white; */
 }
 
 ul{
@@ -31,4 +32,108 @@ ul{
 a{
     text-decoration: none;
     color: white;
+}
+
+.main-bg{
+    width: 100%;
+    height: 800px;
+    /* border: 2px solid red; */
+}
+
+.main{
+    background-color: black;
+    width: 100%;
+    height: 680px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+.content-main{
+    display: grid;
+    grid-template-columns: 2fr 1fr;    
+    max-width: 1200px;
+    justify-content: space-between;
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;    
+}
+
+.column-left{
+    padding: 0 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items: first baseline;
+}
+
+h1{
+    color: var(--w);
+    font-size: 4rem;
+    line-height: 1.2;
+}
+
+p{
+    color: var(--c5);
+    width: 400px;
+    font-size: 1.5rem;
+}
+
+.img-intro{
+    max-width: 640px;
+    height: 800px;
+    object-fit: cover;
+}
+
+.btn-style{
+    padding: 1rem 2rem;
+    background: linear-gradient(to right, var(--p1), var(--p2));
+    color: var(--c12);
+    border-radius: 4px;
+    border: none;
+}
+
+.column-left::after{
+    content: url(./img/dec/bottom-left.svg);
+    position: relative;
+    left: -200px;
+}
+
+@media (max-width: 1105px){
+    .img-intro{
+        max-width: auto;
+        height: auto;
+    }
+}
+
+@media (max-width: 1100px){
+    .img-intro{
+        display: none;
+    }
+
+    .content-main{
+        grid-template-columns: 1fr;
+        max-width: 1200px;
+    }
+
+    .column-left{
+        margin-top: 100px;
+        align-items: center;
+        text-align: center;
+    }
+}
+
+@media (max-width: 560px){
+    .header{
+        flex-direction: column;
+    }
+
+    ul{
+        flex-direction: column;
+        margin-top: 20px;
+    }
+
+    .-bg{
+        background-color: black;
+    }
 }
