--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 @import url(./utilitario.css);
 @import url(./classes-utilitaria.css);
-@import url(./content-bikes.css);
+@import url(./section-bikes.css);
 
 *{
     margin: 0;
