--- a/section-bikes.css
+++ b/section-bikes.css
@@ -7,7 +7,7 @@
 .bikes{
     max-width: 1200px;
     height: 720px;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
