--- a/section-bikes.css
+++ b/section-bikes.css
@@ -11,6 +11,7 @@
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
+    margin-top: 120px;
 }
 
 .img-bikes{
@@ -19,7 +20,13 @@
     place-content: center;
 }
 
-/* .quadrado-bikes{
-    flex-direction: column;
-    align-items: center;
-} */
+@media (max-width: 1299px){
+    .img-bikes{
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .bikes h1{
+        text-align: center;
+    }
+}
