--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url(./utilitario.css);
 @import url(./classes-utilitaria.css);
 @import url(./section-bikes.css);
+/* @import url(./section-info.css); */
 
 *{
     margin: 0;
