--- a/section-info.css
+++ b/section-info.css
@@ -18,10 +18,10 @@
     display: grid;
     grid-template-columns: 2fr 1fr;
     max-width: 1200px;
-    justify-content: space-between;
+    /* justify-content: space-between; */
     margin-left: auto;
     margin-right: auto;
-    align-items: center;
+    /* align-items: center; */
 }
 
 .img-tecnologia{
@@ -39,5 +39,27 @@
 .column-left-info{
     display: flex;
     flex-direction: column;
+    gap: 40px;
+    height: 960px;
+    justify-content: center;
+}
+
+.componentes{
+    display: grid;
+    grid-template-columns: repeat(2, 300px);
     gap: 20px;
+}
+
+.componentes-tecnologia span,
+.componentes-tecnologia2 span{
+    color: var(--c5);
+    font-size: 1rem;
+}
+
+.componentes-tecnologia::before{
+    content: url(./img/icones/eletrica.svg);
+}
+
+.componentes-tecnologia2::before{
+    content: url(./img/icones/rastreador.svg);
 }
