--- a/style.css
+++ b/style.css
@@ -39,14 +39,14 @@ a{
 
 .main-bg{
     width: 100%;
-    height: 800px;
+    max-height: 800px;
     /* border: 2px solid red; */
 }
 
 .main{
     background-color: black;
     width: 100%;
-    height: 680px;
+    max-height: 680px;
     margin-left: auto;
     margin-right: auto;
     
@@ -76,14 +76,6 @@ a{
     object-fit: cover;
 }
 
-.btn-style{
-    padding: 1rem 2rem;
-    background: linear-gradient(to right, var(--p1), var(--p2));
-    color: var(--c12);
-    border-radius: 4px;
-    border: none;
-}
-
 .column-left::after{
     content: url(./img/dec/bottom-left.svg);
     position: relative;
@@ -106,5 +98,62 @@ a{
 
     .header{
         flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 1210px){
+    .img-intro{
+        max-width: 90%;
+        height: auto;
+        /* max-height: 640px; */
+        object-fit: cover;
+        display: block;
+    }
+
+    .content-main{
+    display: grid;
+    grid-template-columns: 1fr 1fr;    
+    max-width: 1200px;
+    /* justify-content: space-between; */
+    align-items: center;
+    margin-left: auto;
+    margin-right: auto;    
+}
+
+    .column-left .texto-alternativo-cinza, .h1-branco{
+        width: auto;
+    }
+}
+
+@media (max-width: 900px){
+    .column-left .h1-branco{
+        font-size: 2.5rem;
+        width: auto;
+    }
+
+    .column-left .texto-alternativo-cinza{
+        font-size: 1rem;
+        width: auto;
+    }
+
+    .btn-style{
+    padding: 0.7rem 1rem;
+    }
+}
+
+@media (max-width: 600px){
+    .content-main{
+        grid-template-columns: 1fr;
+        align-content: center;
+    }
+
+    .img-intro{
+        place-self: center;
+    }
+
+    .column-left{
+        padding: 0 10px;
+        align-items: left;
+        gap: 10px;
     }
 }
