--- a/style.css
+++ b/style.css
@@ -130,7 +130,7 @@ a{
         font-size: 2.5rem;
         width: auto;
     }
-
+    
     .column-left .texto-alternativo-cinza{
         font-size: 1rem;
         width: auto;
@@ -147,8 +147,14 @@ a{
         align-content: center;
     }
 
+    .main{
+        background-color: var(--c10);
+    }
+
     .img-intro{
+        margin-top: -20px;
         place-self: center;
+        height: auto;
     }
 
     .column-left{
