--- a/classes-utilitaria.css
+++ b/classes-utilitaria.css
@@ -20,8 +20,9 @@
 
 .texto-alternativo-cinza{
     color: var(--c5);
-    width: 400px;
-    font-size: 1.5rem;
+    max-width: 400px;
+    /* font-size: 1.5rem; */
+    font-size: clamp(1rem, 2.5vw, 1.5rem);
 }
 
 .subtitulo-preto{
@@ -42,7 +43,7 @@
 
 .texto-alternativo-cinza-small{
     color: var(--c5);
-    width: 400px;
+    max-width: 400px;
     font-size: 1.125rem;
 }
 
@@ -51,6 +52,7 @@
     font-size: 2rem;
     font-weight: 800;
     text-decoration: underline 4px;
+    display: inline-block;
 }
 
 .texto-pequeno-branco{
