section-parceiros 100%, responsivo 80%

--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
 @import url(./classes-utilitaria.css);
 @import url(./section-bikes.css);
 @import url(./section-info.css);
+@import url(./section-parcerias.css);
 
 *{
     margin: 0;
