--- a/section-info.css
+++ b/section-info.css
@@ -1,7 +1,7 @@
 .info{
     display: flex;
     justify-content: center;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
     align-items: center;
     width: 100%;
     max-height: 1120px;
@@ -9,8 +9,8 @@
 }
 
 .info-bg{
-    background-color: black;
-    border: 2px solid blueviolet;
+    background-color: var(--c11);
+    /* border: 2px solid blueviolet; */
     width: 100%;
     max-height: 960px;
 }
