--- a/section-parcerias.css
+++ b/section-parcerias.css
@@ -21,30 +21,15 @@
     grid-template-columns: repeat(4, 1fr);
 }
 
-/* ul .parcerias{
-    margin-top: 30px;
-    position: relative;
-    align-items: first baseline;
-    /* border: 2px solid violet; */
-/* } */
+li{
+    padding: 0px;
 
-/* ul::after{
-    content: "";
-    position: absolute;
-    width: 100%;
-    top: 50%;
-    height: 1px;
-    right: 30px;
-    background: var(--c5);
-    /* display: flex;
-    align-items: center;
-    justify-content: center; */
+}
 
 @media (max-width: 900px){
     .parcerias{
         grid-template-columns: repeat(2, 1fr);
         place-items: center;
-        /* max-width: 100vw; */
     }
 
     ul::after{
@@ -58,5 +43,22 @@
         margin: 0 auto;
         display: block;
         background-color: transparent;
+    }
+}
+
+@media (max-width: 644px){
+    .section-parcerias{
+        margin-top: 0px;
+    }
+}
+
+@media (max-width: 316px){
+
+    .parcerias img{
+        width: 90%;
+    }
+
+    .content-parcerias .h1-preto{
+        font-size: 3.5rem;
     }
 }
