section-motion 100% responsivo

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
 @import url(./section-bikes.css);
 @import url(./section-info.css);
 @import url(./section-parcerias.css);
+@import url(./section-motivacional.css);
 
 *{
     margin: 0;
