teste 1 para os displays de section-seguros. Irei alterar o HTML

--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 @import url(./section-info.css);
 @import url(./section-parcerias.css);
 @import url(./section-motivacional.css);
+@import url(./section-seguros.css);
 
 *{
     margin: 0;
