--- a/classes-utilitaria.css
+++ b/classes-utilitaria.css
@@ -67,3 +67,12 @@
     border-radius: 4px;
     border: none;
 }
+
+.btn-style-cinza{
+    padding: 1rem 2rem;
+    background: var(--c10);
+    color: white;
+    border-radius: 4px;
+    border: none;
+    font-size: 1.2rem;
+}
