--- a/section-seguros.css
+++ b/section-seguros.css
@@ -128,12 +128,15 @@
     margin-left: auto;
     margin-right: auto;
     max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
 }
 
 .seguros-prata-ouro{
     display: flex;
-    justify-content: space-between;
     align-items: center;
+    justify-content: space-between;
 }
 
 .seguros-prata{
@@ -183,4 +186,8 @@
     align-items: start;
     justify-content: space-between;
     border-radius: 4px;
+}
+
+.seguros-ouro button{
+    font-size: 1.2rem;
 }
