--- a/classes-utilitaria.css
+++ b/classes-utilitaria.css
@@ -37,6 +37,24 @@
     font-weight: 800;
 }
 
+/* .texto-pequeno-preto::before{
+content: "";
+display: inline-block;
+position: relative;
+width: 6px;
+height: 6px;
+background-color: var(--p1);
+top: -7px;
+transform-origin: left;
+transform: scaleX(0);
+transition: all 0.3s ease;
+}
+
+.texto-pequeno-preto::before:hover{
+    width: 100%;
+    transform: scaleX(1);
+} */
+
 .texto-pequeno-preto span{
     color: var(--p1);
 }
@@ -55,6 +73,10 @@
     display: inline-block;
 }
 
+.texto-amarelo-bold:hover{
+    color: white;
+}
+
 .texto-pequeno-branco{
     color: var(--w);
     font-size: 1.5rem;
@@ -62,10 +84,24 @@
 
 .btn-style{
     padding: 1rem 2rem;
-    background: linear-gradient(to right, var(--p1), var(--p2));
-    color: var(--c12);
+    /* background: linear-gradient(to right, var(--p1), var(--p2)); */
+    background-color: var(--p1);
+    color: var(--c11);
     border-radius: 4px;
     border: none;
+    font-weight: 600;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.btn-style:hover{
+    background-color: #eaa60a;
+    padding: 1rem 2rem;
+    /* background: linear-gradient(to right, var(--p2), var(--p3)); */
+    color: var(--c11);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
 }
 
 .btn-style-cinza{
@@ -75,4 +111,16 @@
     border-radius: 4px;
     border: none;
     font-size: 1.2rem;
+    cursor: pointer;
+    transition: all 0.2s ease;
+}
+
+.btn-style-cinza:hover{
+    padding: 1rem 2rem;
+    background: var(--c9);
+    color: white;
+    border-radius: 4px;
+    border: none;
+    font-size: 1.2rem;
+    cursor: pointer;
 }
