--- a/section-bikes.css
+++ b/section-bikes.css
@@ -4,6 +4,11 @@
     max-height: 720px;
     object-fit: cover;
     border-radius: 8px;
+    transition: all 0.3s ease;
+}
+
+.img-bike-pequena:hover{
+    scale: 1.02;
 }
 
 .bikes{
