--- a/section-seguros.css
+++ b/section-seguros.css
@@ -2,11 +2,11 @@
     width: 100%;
     min-height: 800px;
     background-color: var(--c11);
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 .content-seguros{
-    border: 2px solid brown;
+    /* border: 2px solid brown; */
     height: 100%;
     margin-left: auto;
     margin-right: auto;
