--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@
     list-style: none;
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
+    transition: all 0.2s ease;
 }
 
 .header-bg{
@@ -34,6 +35,35 @@
 ul{
     display: flex;
     gap: 40px;
+}
+
+ul li {
+  position: relative;
+  display: inline-block; /* ou flex, dependendo do layout */
+  padding-bottom: 4px;
+  cursor: pointer;
+}
+
+ul li::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  height: 2px;
+  width: 10px; /* início com 10px */
+  background-color: rgb(255, 255, 255); /* cor da linha */
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 0.3s ease;
+}
+
+ul li:hover::after {
+  transform: scaleX(1);
+  width: 100%; /* cresce até ocupar todo o elemento */
+}
+
+li:hover{
+
 }
 
 a{
