--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 @import url(./section-motivacional.css);
 @import url(./section-seguros.css);
 @import url(footer.css);
+@import url(./style-bicicleta.css);
 
 *{
     margin: 0;
@@ -14,6 +15,10 @@
     box-sizing: border-box;
     font-family: "Poppins", sans-serif;
     transition: all 0.2s ease;
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 .header-bg{
