--- a/style-bicicleta.css
+++ b/style-bicicleta.css
@@ -3,10 +3,74 @@ article{
     width: 100%;
     background-color: var(--c11);
     padding: 60px;
+    gap: 80px;
 }
 
 .cta-article{
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+}
+
+.article-bikes{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+}
+
+.article-bike1{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    max-height: 400px;
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.article-bike1 img{
+    width: 540px;
+    height: 320px;
+    border-radius: 4px;
+    object-fit: cover;
+}
+
+.text-bike1{
+    display: flex;
+    flex-direction: column;
+    margin-left: 20px;
+    align-items: start;
+}
+
+.item-bike1{
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    margin-top: 20px;
+}
+
+.article-bike1 h2{
+    font-size: 2.25rem;
+}
+
+
+.article-bike1 p{
+    color: var(--c8);
+    font-size: 1.125rem
+}
+
+li{
+    font-size: 1.125rem;
+}
+
+.itens-button{
+    display: flex;
+    width: 600px;
+    justify-content: space-between;
+    /* border: 2px solid brown; */
+}
+
+.section-bike2{
+    width: 100%;
+    background-color: black;
 }
