--- a/style-bicicleta.css
+++ b/style-bicicleta.css
@@ -1,10 +1,8 @@
-article{
-    /* max-height: 240px; */
+/* article{
     width: 100%;
     background-color: var(--c11);
     padding: 60px 0;
     gap: 80px;
-    /* border: 2px solid blue; */
 }
 
 .cta-article{
@@ -18,7 +16,6 @@ article{
     display: flex;
     flex-direction: column;
     background-color: white;
-    /* border: 2px solid brown; */
 }
 
 .article-bike1,
@@ -27,28 +24,26 @@ article{
     display: grid;
     grid-template-columns: 1fr 1fr;
     max-height: 400px;
-    width: 1200px;
+    max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
-    /* border: 2px solid blueviolet; */
 }
 
 .article-bike1 img,
 .article-bike2 img,
 .article-bike3 img{
-    width: 540px;
-    height: 320px;
+    max-width: 540px;
+    max-height: 320px;
+    width: 100%;
     border-radius: 4px;
     object-fit: cover;
 }
 
-/* .text-bike1{
+.text-bike1{
     display: flex;
     flex-direction: column;
-    margin-left: 20px;
-    align-items: left;
-    text-align: left;
-} */
+    min-width: 100%;
+}
 
 .item-bike1{
     display: flex;
@@ -60,8 +55,6 @@ article{
 .article-bike1 h2,
 .article-bike3 h2{
     font-size: 2.25rem;
-    text-align: left;
-    /* border: 2px solid brown; */
     position: relative;
 }
 
@@ -79,47 +72,24 @@ li{
 
 .itens-button{
     display: flex;
-    width: 600px;
+    max-width: 600px;
     justify-content: space-between;
-    /* border: 2px solid brown; */
 }
 
 .section-bike2{
-    width: 100%;
+    max-width: 100%;
     height: 460px;
-    /* max-width: 1200px; */
     display: flex;
     align-items: center;
-    /* margin-left: auto; */
-    /* margin-right: auto; */
-    /* background-color: black; */
-     background: linear-gradient(to right, white 0% 25%, #111 25% 100%);
-    /* border: 2px solid blue; */
+    background: linear-gradient(to right, white 0% 25%, #111 25% 100%);
 }
 
-/* .section-bike2 .article-bike1 h2{
-    font-size: 2.25rem;
-    color: white;
-} */
 
 .article-bike2 h2{
     font-size: 2.25rem;
     color: white;
     position: relative;
-    /* text-align: left; */
 }
-
-/* .article-bike2 h2::after{
-    content: "";
-    background-image: url(./img/dec/top-right.svg);
-    width: 60px;
-    height: 60px;
-    background-repeat: no-repeat;
-    color: white;
-    position: absolute;
-    right: 0px;
-    bottom: 10px;
-} */
 
 h2::after{
     content: "";
@@ -131,16 +101,14 @@ h2::after{
     position: absolute;
     right: 0px;
     bottom: 10px;
-
 }
 
 .section-bike2 .article-bike1 p{
-    /* font-size: 2.25rem; */
+    font-size: 2.25rem;
     color: var(--c7);
 }
 
 .article-bike2 p{
-    /* font-size: 2.25rem; */
     color: var(--c6);
 }
 
@@ -164,8 +132,6 @@ h2::after{
     font-weight: 300;
     background-color: var(--c11);
     position: absolute;
-    /* left: 600px;
-    top: 900px; */
     display: inline-block;
     color: white;
     border-radius: 4px;
@@ -180,8 +146,6 @@ h2::after{
     font-weight: 300;
     background-color: var(--c11);
     position: absolute;
-    /* left: 600px;
-    top: 900px; */
     display: inline-block;
     color: white;
     border-radius: 4px;
@@ -231,3 +195,52 @@ h2::after{
 .rastreador::before{
     content: url(./img/icones/rastreador.svg);
 }
+
+@media (max-width:1200px){
+    .article-bike1,
+    .article-bike2,
+    .article-bike3{
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr 300px;
+    max-height: 400px;
+    max-width: 800px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+    .article-bike1 img{
+        max-width: 755px;
+        max-height: 460px;
+
+    }
+
+    .text-bike1{
+
+        min-height: 400px;
+    }
+
+    .beneficios-bike{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: 1fr 1fr;
+        justify-content: center;
+    }
+
+    .itens-button{
+        display: flex;
+        flex-direction: column;
+        position: relative;
+    }
+
+    .itens-button button{
+        position: absolute;
+        top: 60px;
+    }
+}
+
+@media (max-width: 350px){
+    .cta-article h1{
+        font-size: 3rem;
+    }
+} */
