--- a/style-bike2.css
+++ b/style-bike2.css
@@ -24,12 +24,12 @@ article{
 .main-principal{
     width: 100%;
     height: 100%;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 .bicicletas{
     max-width: 1200px;
-    border: 2px solid brown;
+    /* border: 2px solid brown; */
     margin-left: auto;
     margin-right: auto;
     /* display: flex; */
@@ -38,13 +38,15 @@ article{
 .content-bicicletas{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    position: relative;
+    gap: 20px;
+    padding: 20px;
+    
 }
 
 .preco-bike{
     position: absolute;
-    top: 5px;
-    left: 446px;
+    top: 10px;
+    right: 0px;
     background-color: black;
     padding: 0 15px;
     color: white;
@@ -53,8 +55,18 @@ article{
     font-weight: 100;
 }
 
-.content-bicicletas img{
-    max-width: 540px;
+.imagem-container{
+    position: relative;
+    width: 100%;
+    /* border: 2px solid blue; */
+}
+
+.imagem-container img{
+    width: 100%;
+}
+
+.imagem-container img{
+    max-width:  100%;
     max-height: 320px;
     width: 100%;
     object-fit: cover;
@@ -65,20 +77,6 @@ article{
     font-size: 2rem;
     position: relative;
 }
-
-/* .h2-name-bikes::before{
-    content: "R$ 2499";
-    background-color: black;
-    border-radius: 4px;
-    color: white;
-    font-weight: 100;
-    font-size: 1.2rem;
-    align-items: center;
-    position: absolute;
-    padding: 0 15px;
-    left: -165px;
-    top: 4px;
-} */
 
 .description{
     font-size: 1rem;
@@ -92,7 +90,6 @@ article{
 }
 
 .botao-container{
-    border: 2px solid black; 
     display: flex;
     justify-content: flex-end;
     width: 100%;
@@ -140,10 +137,4 @@ article{
     content: url(./img/icones/rastreador.svg);
 }
 
-@media (max-width: 1200px){
-    .textos-bike1 p{
-
-    }
-}
-
-
+@media (max-width: 860px)
