--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 @import url(./section-motivacional.css);
 @import url(./section-seguros.css);
 @import url(footer.css);
-@import url(./style-bicicleta.css);
+@import url(./style-pag-bike.css);
 
 *{
     margin: 0;
