criada a pagina de seguros.html, já estilizada, falta algumas coisas.

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 @import url(./section-seguros.css);
 @import url(footer.css);
 @import url(./style-pag-bike.css);
+@import url(./style-seguros.css);
 
 *{
     margin: 0;
