--- a/classes-utilitaria.css
+++ b/classes-utilitaria.css
@@ -4,7 +4,14 @@
     line-height: 1.1;
 }
 
-.h1-branco span{
+.h1-branco-no-details{
+    color: var(--w);
+    font-size: 4rem;
+    line-height: 1.1;
+}
+
+.h1-branco span,
+.h1-branco-no-details span{
     color: var(--p1);
 }
 
