--- a/style-pag-bike.css
+++ b/style-pag-bike.css
@@ -29,6 +29,7 @@ article{
     flex-direction: column;
     gap: 40px;
     margin-top: 40px;
+    margin-bottom: 40px;
     /* border: 2px solid blue; */
 }
 
