--- a/style-seguros.css
+++ b/style-seguros.css
@@ -121,6 +121,7 @@
     /* border: 2px solid red; */
     display: flex;
     align-items: center;
+    padding: 60px 0;
 }
 
 .container-perguntas{
