--- a/style-contato.css
+++ b/style-contato.css
@@ -1,27 +1,39 @@
 .main-formulario{
-    background-color: black;
+    background-image: linear-gradient(to bottom, #111 0% 60%, white 60% 100%);
     color: white;
     width: 100%;
     height: 100%;
-    /* border: 2px solid brown; */
+    border: 2px solid brown;
 }
 
 .grid-formulario-local{
     max-width: 1200px;
     margin-left: auto;
     margin-right: auto;
+    /* background-color: white; */
     padding: 30px;
     display: grid;
     grid-template-columns: 1fr 2fr;
+    border: 2px solid blue;
 }
 
 .content-localizacao{
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 30px;
+    padding: 60px;
+    background-color: black;
     /* border: 2px solid blue; */
     justify-content: space-between;
+    position: relative;
+}
+
+.content-localizacao::after{
+    content: url(./img/dec/top-right.svg);
+    position: absolute;
+    bottom: 0px;
+    left: 0px;
+    padding: 0px 30px;
 }
 
 .local-inf{
@@ -70,11 +82,18 @@
     display: flex;
     flex-direction: column;
     /* gap: 10px; */
+    position: relative;
 }
 
 .content-form button{
     margin-top: 10px;
     align-self: start;
+}
+
+.content-form button::after{
+    content: url(./img/dec/bottom-right.svg);
+    position: absolute;
+    right: 0px;
 }
 
 .formulario{
@@ -96,8 +115,9 @@
 .nome{
     display: flex;
     flex-direction: column;
+    flex: 1;
+    margin-right: 10px;
 }
-
 
 .content-form input,
 .content-form textarea{
@@ -112,4 +132,29 @@
     color: var(--c11);
     font-weight: 500;
     font-size: 1rem
+}
+
+i{
+    color: var(--p1);
+}
+
+@media (max-width:880px){
+    .grid-formulario-local{
+        grid-template-columns: 1fr;
+    }
+}
+
+@media (max-width: 563px){
+    .formulario{
+        min-width: 100px;
+        min-height: 100px;
+    }
+
+    .nome-telefone{
+        flex-direction: column;
+    }
+
+    .grid-formulario-local{
+        min-width: 100px;
+    }
 }
