--- a/style-contato.css
+++ b/style-contato.css
@@ -3,7 +3,7 @@
     color: white;
     width: 100%;
     height: 100%;
-    border: 2px solid brown;
+    /* border: 2px solid brown; */
 }
 
 .grid-formulario-local{
@@ -14,7 +14,7 @@
     padding: 30px;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    border: 2px solid blue;
+    /* border: 2px solid blue; */
 }
 
 .content-localizacao{
@@ -201,4 +201,132 @@ i{
     .content-localizacao::after{
         display: none;
     }
+}
+
+/* Aqui inicio a estilização da section-lojas-locais */
+
+/* .section-lojas-locais{
+    width: 100%;
+    border: 2px solid blue;
+    height: 100%;
+    background-color: var(--c2);
+}
+
+.container-lojas-locais{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+}
+
+.content-lojas-locais{
+    display: flex;
+}
+
+.content-lojas-locais img{
+    max-width: 560px;
+    max-height: 260px;
+    object-fit: cover;
+}
+
+.content-infos{
+    display: flex;
+    flex-direction: column;
+    padding: 0 40px;
+    max-width: 560px;
+    gap: 10px;  
+    background-color: white;  
+}
+
+.content-esquerda{
+    display: flex;
+    flex-direction: column;
+    border-radius: 4px;
+    box-shadow: 0px 2px 10px var(--c4);
+}
+
+.infos{
+    border-top: 2px solid var(--c2);
+    padding: 10px 0;
+}
+
+.enderecos{
+    margin-bottom: 10px;
+}
+
+.content-infos h2{
+    font-size: 2rem;
+    position: relative;
+}
+
+.content-infos h2::before{
+    content: "";
+    width: 12px;
+    height: 8px;
+    background-color: var(--p1);
+    display: inline-block;
+    margin-right: 10px;
+    position: absolute;
+    left: -25px;
+    top: 20px;
+}
+
+.content-infos span{
+    font-weight: 700;
+    position: relative;
+    margin-left: -20px;
+}
+
+.content-infos span::before{
+    content: url(./img/icones/horario.svg);
+    margin-right: 10px;
+}
+
+.content-esquerda{
+    margin-right: 40px;
+} */
+
+.section-lojas{
+    width: 100%;
+    height: 100%;
+    border: 2px solid blue;
+    background-color: var(--c2);
+}
+
+.grid-container{
+    max-width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding: 30px;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    /* grid-template-rows: 100px 1fr; */
+    gap: 40px 20px;
+    border: 2px solid brown;
+}
+
+.grid-container h1{
+    grid-column: 1;
+}
+
+.lojas-item{
+    grid-row: 2;
+}
+
+.lojas-item img{
+    width: 560px;
+    height: 260px;
+    display: block;
+    object-fit: cover;
+}
+
+.lojas-conteudo{
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 30px;
+    background-color: white;
+    border: 2px solid red;
+}
+
+.lojas-item-direita{
 }
