--- a/style-contato.css
+++ b/style-contato.css
@@ -205,87 +205,6 @@ i{
 
 /* Aqui inicio a estilização da section-lojas-locais */
 
-/* .section-lojas-locais{
-    width: 100%;
-    border: 2px solid blue;
-    height: 100%;
-    background-color: var(--c2);
-}
-
-.container-lojas-locais{
-    max-width: 1200px;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 30px;
-}
-
-.content-lojas-locais{
-    display: flex;
-}
-
-.content-lojas-locais img{
-    max-width: 560px;
-    max-height: 260px;
-    object-fit: cover;
-}
-
-.content-infos{
-    display: flex;
-    flex-direction: column;
-    padding: 0 40px;
-    max-width: 560px;
-    gap: 10px;  
-    background-color: white;  
-}
-
-.content-esquerda{
-    display: flex;
-    flex-direction: column;
-    border-radius: 4px;
-    box-shadow: 0px 2px 10px var(--c4);
-}
-
-.infos{
-    border-top: 2px solid var(--c2);
-    padding: 10px 0;
-}
-
-.enderecos{
-    margin-bottom: 10px;
-}
-
-.content-infos h2{
-    font-size: 2rem;
-    position: relative;
-}
-
-.content-infos h2::before{
-    content: "";
-    width: 12px;
-    height: 8px;
-    background-color: var(--p1);
-    display: inline-block;
-    margin-right: 10px;
-    position: absolute;
-    left: -25px;
-    top: 20px;
-}
-
-.content-infos span{
-    font-weight: 700;
-    position: relative;
-    margin-left: -20px;
-}
-
-.content-infos span::before{
-    content: url(./img/icones/horario.svg);
-    margin-right: 10px;
-}
-
-.content-esquerda{
-    margin-right: 40px;
-} */
-
 .section-lojas{
     width: 100%;
     height: 100%;
@@ -295,38 +214,127 @@ i{
 
 .grid-container{
     max-width: 1200px;
+    height: 100%;
     margin-left: auto;
     margin-right: auto;
     padding: 30px;
     display: grid;
     grid-template-columns: 1fr 1fr;
-    /* grid-template-rows: 100px 1fr; */
     gap: 40px 20px;
     border: 2px solid brown;
 }
 
 .grid-container h1{
-    grid-column: 1;
+    grid-column: 1 / -1;
 }
 
-.lojas-item{
+/* .lojas-item{
     grid-row: 2;
-}
+} */
 
-.lojas-item img{
-    width: 560px;
-    height: 260px;
+.lojas-item img,
+.lojas-item2 img{
+    max-width: 560px;
+    width: 100%;
+    max-height: 260px;
     display: block;
     object-fit: cover;
+}
+
+.lojas-item,
+.lojas-item2{
+    border: 2px solid blue;
+    max-width: 100%;
+    height: 100%;
 }
 
 .lojas-conteudo{
     display: grid;
     grid-template-columns: 1fr 1fr;
+    /* grid-template-columns: repeat(auto-fit, mimax(150px, 1fr)); */
     padding: 30px;
     background-color: white;
+    width: 100%;
+    height: auto;
     border: 2px solid red;
 }
 
-.lojas-item-direita{
+.dados-lojas{
+    grid-row: 2;
+    grid-column: 1;
+}
+
+.dados-lojas2{
+    grid-row: 2;
+}
+
+.lojas-conteudo h2{
+    grid-column: 1 / 3;
+}
+
+.dados-lojas p{
+    border-left: 2px solid var(--c3);
+    padding: 0 10px;
+    border-right: 2px solid var(--c3);
+    margin-right: 10px;
+}
+
+.dados-lojas span{
+    font-weight: 700;
+    position: relative;
+    padding: 30px;
+}
+
+.dados-lojas span::before{
+    content: url(./img/icones/horario.svg);
+    position: absolute;
+    left: 0px;
+}
+
+.lojas-conteudo h2::before{
+    content: "";
+    width: 20px;
+    height: 8px;
+    background-color: var(--p1);
+    display: block;
+    position: absolute;
+    bottom: 45px;
+    left: 0px;
+}
+
+.lojas-conteudo h2{
+    position: relative;
+    padding: 30px;
+}
+
+@media (max-width: 920px){
+    .lojas-conteudo{
+        grid-template-columns: 1fr;
+    }
+    .dados-lojas2{
+    grid-row: auto;
+    }
+    .lojas-conteudo h2{
+    grid-column: auto;
+}
+}
+
+@media (max-width: 708px){
+    .lojas-conteudo h2{
+        font-size: 1.3rem;
+    }
+
+    .dados-lojas span{
+        font-weight: 550;
+    }
+}
+
+@media (max-width: 666px){
+    .grid-container{
+        grid-template-columns: 1fr;
+    }
+    .lojas-item img,
+    .lojas-item2 img{
+        width: 1000px;
+    }
 }
