--- a/style-orcamento.css
+++ b/style-orcamento.css
@@ -5,14 +5,13 @@
 }
 
 .radio-container{
-    width: 460px;
-    height: 1000px;
 }
 
 .main-orcamento{
     width: 100%;
     height: 100%;
     border: 2px solid blue;
+    background-color: var(--c2);
 }
 
 .container-orcamento{
@@ -28,6 +27,10 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 10px;
+    height: 100%;
+    padding: 30px;
+    background-color: white;
+    border-radius: 0 4px 4px 0;
 }
 
 .form-orcamento p{
@@ -39,13 +42,25 @@
     text-decoration: underline;
 }
 
+.main-orcamento p{
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+.main-orcamento p::before{
+    content: "";
+    width: 4px;
+    height: 8px;
+    background-color: var(--p1);
+    display: inline-block;
+    position: absolute;
+    left: -10px;
+}
+
 .btn{
     grid-column: span 2;
 }
-
-/* .aceito-termos{
-    grid-column: span 2;
-} */
 
 .form-orcamento label{
     display: block;
@@ -85,3 +100,6 @@ label{
     font-weight: 500;
     font-size: 1rem
 }
+
+/* Estilização do formulario lado esquerdo */
+
